[package]
name = "algorithm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "01_double_pointer/leetcode167",
    "01_double_pointer/leetcode633",
    "01_double_pointer/leetcode345",
    "01_double_pointer/leetcode680",
    "01_double_pointer/leetcode88",
    "01_double_pointer/leetcode141",
    "01_double_pointer/leetcode524", 
    "02_sort/leetcode215",
    "02_sort/leetcode347",
    "02_sort/leetcode451",
    "02_sort/leetcode75", 
    "03_greedy/leetcode455", 
    "03_greedy/leetcode435", 
    "03_greedy/leetcode452", 
    "03_greedy/leetcode406", 
    "03_greedy/leetcode121", 
    "03_greedy/leetcode122", 
    "03_greedy/leetcode605", 
    "03_greedy/leetcode392", 
    "03_greedy/leetcode665", 
    "03_greedy/leetcode63", 
    "03_greedy/leetcode763", 
    "04_binary_search/leetcode69", 
    "04_binary_search/leetcode744", 
    "04_binary_search/leetcode540", 
    "04_binary_search/leetcode278", 
    "04_binary_search/leetcode153",
]

[dependencies]
